// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be centered with padding 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    center="center"
    hMargin="0%"
    hPad="0%"
    height={null}
    justify="center"
    size={null}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "marginVertical": 0,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": undefined,
      }
    }
    vMargin="0%"
    vPad="0%"
    width={null}
  />
  <View
    center={null}
    hMargin="0%"
    hPad="2%"
    height={null}
    justify="center"
    size={null}
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "marginVertical": 0,
        "paddingHorizontal": 15,
        "paddingVertical": 26.5,
        "width": undefined,
      }
    }
    vMargin="0%"
    vPad="2%"
    width={null}
  />
  <View
    center="center"
    hMargin="0%"
    hPad="0%"
    height={null}
    justify="flex-start"
    size={null}
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "flex-start",
        "marginHorizontal": 0,
        "marginVertical": 0,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": undefined,
      }
    }
    vMargin="0%"
    vPad="0%"
    width={null}
  />
  <View
    center={null}
    hMargin="0%"
    hPad="2%"
    height={null}
    justify="center"
    size={null}
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "column",
        "flexWrap": "nowrap",
        "height": undefined,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "marginVertical": 0,
        "paddingHorizontal": 15,
        "paddingVertical": 26.5,
        "width": undefined,
      }
    }
    vMargin="0%"
    vPad="2%"
    width={null}
  />
</View>
`;

exports[`should render correctly 1`] = `
Object {
  "output": <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Row
      center={null}
      hMargin="0%"
      hPad="0%"
      height={null}
      justify="center"
      size={null}
      style={Object {}}
      vMargin="0%"
      vPad="0%"
      width={null}
    />
    <Col
      center={null}
      hMargin="0%"
      hPad="0%"
      height={null}
      justify="center"
      size={null}
      style={Object {}}
      vMargin="0%"
      vPad="0%"
      width={null}
    />
  </View>,
}
`;
